--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -11,7 +11,7 @@
 
 <body class="bg-purple-100">
 
-  <%- include('../header.ejs', { status: stauts }) -%>
+  <%- include('../header.ejs', { status: status }) -%>
 
   <div class="container mx-auto mt-20 px-4">
     <div class="">
@@ -22,7 +22,7 @@
 
         <div class="mb-4">
           <label for="email" class="block text-gray-800 font-semibold mb-2">email</label>
-          <input type="email" id="email" name="email" class="w-full border p-2 border-violet-500 rounded-md">
+          <input type="email" id="email" name="email" class="w-full border p-2 border-violet-500 rounded-md" required>
           <% if(message1) {%>
           <p class="text-red-500"><%=message1 %>
           <p>
@@ -30,7 +30,7 @@
         </div>
         <div class="mb-4">
           <label for="password" class="block text-gray-800 font-semibold mb-2">Password</label>
-          <input type="password" id="password" name="password" class="w-full border p-2 border-violet-500 rounded-md">
+          <input type="password" id="password" name="password" class="w-full border p-2 border-violet-500 rounded-md" required>
           <% if(message2) {%>
             <p class="text-red-500"><%=message2 %>
             <p>
