--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -21,7 +21,7 @@
         class="w-full max-w-md bg-white rounded-md shadow-md p-6">
         <div class="mb-4">
           <label for="username" class="block text-gray-800 font-semibold mb-2">Username:</label>
-          <input type="text" id="username" name="username" class="w-full border p-2 border-violet-500 rounded-md">
+          <input type="text" id="username" name="username" class="w-full border p-2 border-violet-500 rounded-md" required>
           <% if (message1) { %>
             <p class="text-red-500 text-md  ">
               <%= message1 %>
@@ -30,7 +30,7 @@
         </div>
         <div class="mb-4">
           <label for="email" class="block text-gray-800 font-semibold mb-2">Email:</label>
-          <input type="email" id="email" name="email" class="w-full border p-2 border-violet-500 rounded-md">
+          <input type="email" id="email" name="email" class="w-full border p-2 border-violet-500 rounded-md" required>
           <% if (message2) { %>
             <p class="text-red-500 text-md  ">
               <%= message2 %>
@@ -39,7 +39,7 @@
         </div>
         <div class="mb-4">
           <label for="password" class="block text-gray-800 font-semibold mb-2">Password:</label>
-          <input type="password" id="password" name="password" class="w-full border p-2 border-violet-500 rounded-md">
+          <input type="password" id="password" name="password" class="w-full border p-2 border-violet-500 rounded-md" required>
         </div>
         <button type="submit" class="bg-violet-500 text-white px-4 py-2 hover:bg-violet-600 w-full">Signup</button>
       </form>
