--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -11,7 +11,7 @@
 
 <body class="bg-purple-100">
 
-  <%- include('../header.ejs', { status: stauts }) -%>
+  <%- include('../header.ejs', { status: status }) -%>
 
 
     <div class="container mx-auto mt-20 px-4">
