--- a/src/views/post/post_detail.ejs
+++ b/src/views/post/post_detail.ejs
@@ -16,58 +16,89 @@
 
 
 
-  <div class="container mx-auto mt-20 flex flex-col md:flex-row mb-24 px-4">
-    <!-- Left Part: Blog Description (75%) -->
-    <div class="w-full md:w-3/4 p-6 bg-white rounded-md shadow-md mb-4 md:mb-0 md:mr-8">
-      <img src=<%= post.image %> alt=<%= post.title %> class="mb-4 rounded-md w-full ">
-      <h2 class="text-3xl font-semibold mb-4 text-black-800"><%= post.title %></h2>
-      <p class="text-gray-800 mb-4">
-        <%= post.content %>
+    <div class="container mx-auto mt-20 flex flex-col md:flex-row mb-24 px-4">
+      <!-- Left Part: Blog Description (75%) -->
+      <div class="w-full md:w-3/4 p-6 bg-white rounded-md shadow-md mb-4 md:mb-0 md:mr-8">
+        <img src=<%=post.image %> alt=<%= post.title %> class="mb-4 rounded-md w-full ">
+          <h2 class="text-3xl font-semibold mb-4 text-black-800">
+            <%= post.title %>
+          </h2>
+          <p class="text-gray-800 mb-4">
+            <%= post.content %>
 
-      </p>
-      <% if(check) {%>
-      <a href="<%= `/post/${post._id}/edit` %>"><button class="bg-green-500 text-white px-4 py-2 rounded" >Edit</button></a>
-      <button class="bg-red-500 text-white px-4 py-2 rounded">Delete</button>
-      <%}%>
-    </div>
+          </p>
+          <% if(check) {%>
+            <a href="<%= `/post/${post._id}/edit` %>"><button
+                class="bg-green-500 text-white px-4 py-2 rounded">Edit</button></a>
+            <button class="bg-red-500 text-white px-4 py-2 rounded">Delete</button>
+            <%}%>
+      </div>
 
-    <!-- Right Part: Comments (25%) -->
-    <div class="w-full md:w-1/4 p-6 bg-white rounded-md shadow-md md:ml-8">
-      <!-- Comments Section -->
-      <div class="mb-4">
-        <h3 class="text-xl font-semibold mb-2 text-violet-800">Comments</h3>
+      <!-- Right Part: Comments (25%) -->
+      <div class="w-full md:w-1/4 p-6 bg-white rounded-md shadow-md md:ml-8">
+        <!-- Comments Section -->
 
-        <!-- Sample Comment -->
-        <div class="flex items-center mb-4 bg-violet-600 p-2 rounded-lg">
-          <img src="./images/avatar1.jpg" alt="Profile" class="rounded-full mr-4" height="50" width="50">
-          <div>
-            <strong class="text-white">Username</strong>
-            <p class="text-white">Nice blog! I really enjoyed reading it.</p>
-          </div>
+        <div class="mb-4">
+          <h3 class="text-xl font-semibold mb-2 text-violet-800">Comments</h3>
+
+          <% comments.forEach((iteam)=> {%>
+            <div class="flex items-center mb-4 bg-violet-600 p-2 rounded-lg">
+              <img src="/images/avtar.webp" alt="Profile" class="rounded-full mr-4" height="50" width="50">
+
+              <div>
+                <strong class="text-white">
+                  <%= iteam.user.username %>
+                </strong>
+                <p class="text-white">
+                  <%= iteam.text %>
+                </p>
+              </div>
+
+            </div>
+            <% }) %>
+
+              <div class="flex items-center mb-4 bg-violet-600 p-2 rounded-lg">
+                <img src="/images/avtar.webp" alt="Profile" class="rounded-full mr-4" height="50" width="50">
+
+                <div>
+                  <strong class="text-white">
+                    SDFGBUIKJ
+                  </strong>
+                  <p class="text-white">
+                    JSBDVJK
+                  </p>
+
+                  <button type="button"
+                    class="mt-2 text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-md text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Edit</button>
+
+                    <button type="button" class="mt-2 text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-md text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Delete</button>
+                </div>
+              </div>
+
         </div>
 
-        <!-- Add more comments as needed -->
-
-      </div>
-
-      <!-- Comment Box -->
-      <div>
-        <h3 class="text-xl font-semibold mb-2 text-violet-800">Add a Comment</h3>
-        <textarea class="w-full h-16 border p-2 mb-2 border-black"></textarea>
-        <button class="bg-violet-500 text-white px-4 py-2 hover:bg-violet-600">Submit Comment</button>
+        <!-- Comment Box -->
+        <div>
+          <h3 class="text-xl font-semibold mb-2 text-violet-800">Add a Comment</h3>
+          <form method="POST" action="/comment">
+            <input type="hidden" name="post_id" value=<%=post.id %>>
+            <textarea class="w-full h-16 border p-2 mb-2 border-black" name="comment" required></textarea>
+            <button class="bg-violet-500 text-white px-4 py-2 hover:bg-violet-600" type="submit">Submit
+              Comment</button>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- JavaScript to toggle mobile menu visibility -->
-  <script>
-    const mobileMenuToggle = document.getElementById('mobile-menu-toggle');
-    const mobileMenu = document.getElementById('mobile-menu');
+    <!-- JavaScript to toggle mobile menu visibility -->
+    <script>
+      const mobileMenuToggle = document.getElementById('mobile-menu-toggle');
+      const mobileMenu = document.getElementById('mobile-menu');
 
-    mobileMenuToggle.addEventListener('click', () => {
-      mobileMenu.classList.toggle('hidden');
-    });
-  </script>
+      mobileMenuToggle.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+      });
+    </script>
 
 </body>
 
