--- a/src/views/post/post_detail.ejs
+++ b/src/views/post/post_detail.ejs
@@ -57,7 +57,7 @@
             </div>
             <% }) %>
 
-              <div class="flex items-center mb-4 bg-violet-600 p-2 rounded-lg">
+              <!-- <div class="flex items-center mb-4 bg-violet-600 p-2 rounded-lg">
                 <img src="/images/avtar.webp" alt="Profile" class="rounded-full mr-4" height="50" width="50">
 
                 <div>
@@ -73,7 +73,7 @@
 
                     <button type="button" class="mt-2 text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-md text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Delete</button>
                 </div>
-              </div>
+              </div> -->
 
         </div>
 
