--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -1,6 +1,6 @@
 <nav class="bg-violet-500 p-4 fixed top-0 w-full z-10">
   <div class="container mx-auto flex justify-between items-center">
-    <a href="#" class="text-white font-bold text-lg">Your Logo</a>
+    <a href="/" class="text-white font-bold text-lg">Your Logo</a>
     <div class="hidden md:flex space-x-4">
       <% if(status) {%>
       <a href="/signup" class="text-white hover:text-gray-300">sign Up</a>
