--- a/src/views/post/post_detail.ejs
+++ b/src/views/post/post_detail.ejs
@@ -42,39 +42,27 @@
           <h3 class="text-xl font-semibold mb-2 text-violet-800">Comments</h3>
 
           <% comments.forEach((iteam)=> {%>
-            <div class="flex items-center mb-4 bg-violet-600 p-2 rounded-lg">
-              <img src="/images/avtar.webp" alt="Profile" class="rounded-full mr-4" height="50" width="50">
-
-              <div>
-                <strong class="text-white">
-                  <%= iteam.user.username %>
-                </strong>
-                <p class="text-white">
-                  <%= iteam.text %>
-                </p>
-              </div>
-
-            </div>
-            <% }) %>
-
-              <!-- <div class="flex items-center mb-4 bg-violet-600 p-2 rounded-lg">
+            <% console.log(iteam) %>
+              <div class="flex items-center mb-4 bg-violet-600 p-2 rounded-lg">
                 <img src="/images/avtar.webp" alt="Profile" class="rounded-full mr-4" height="50" width="50">
 
                 <div>
                   <strong class="text-white">
-                    SDFGBUIKJ
+                    <%= iteam.user.username %>
                   </strong>
                   <p class="text-white">
-                    JSBDVJK
+                    <%= iteam.text %>
                   </p>
-
-                  <button type="button"
-                    class="mt-2 text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-md text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Edit</button>
-
-                    <button type="button" class="mt-2 text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-md text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Delete</button>
+                  <% if(iteam.check) {%>
+                    <form method="POST"   action=<%= `/post/${post._id}/comment/${iteam._id}` %>   >
+                      <button type="button" id="delete-btn" onclick="confirm('are you sure want to delete') ? this.closest('form').submit()  : console.log('not delete')"
+                        class="mt-2 text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-md text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Delete</button>
+                    </form>
+                    <%}%>
                 </div>
-              </div> -->
-
+                
+              </div>
+              <% }) %>
         </div>
 
         <!-- Comment Box -->
