--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -1,17 +1,18 @@
 <nav class="bg-violet-500 p-4 fixed top-0 w-full z-10">
-  <div class="container mx-auto flex justify-between items-center">
-    <a href="/" class="text-white font-bold text-lg">Your Logo</a>
-    <div class="hidden md:flex space-x-4">
-      <% if(status) {%>
-      <a href="/signup" class="text-white hover:text-gray-300">sign Up</a>
-      <a href="/login" class="text-white hover:text-gray-300">Login</a>
-      <%}%>
-      
-      <% if(!status) {%>
-      <a href="/" class="text-white hover:text-gray-300">Home</a>
-      <a href="/create" class="text-white hover:text-gray-300">Add Blog</a>
-      <form action="/logout" method="post"><input type="submit" value="Logout" class="text-white hover:text-gray-300"></input></form>
-      <%}%>
+    <div class="container mx-auto flex justify-between items-center">
+        <a href="/" class="text-white font-bold text-lg">Your Logo</a>
+        <div class="hidden md:flex space-x-4">
+            <% if(status) {%>
+                <a href="/signup" class="text-white hover:text-gray-300">sign Up</a>
+                <a href="/login" class="text-white hover:text-gray-300">Login</a>
+                <%}%>
+
+                    <% if(!status) {%>
+                        <a href="/" class="text-white hover:text-gray-300">Home</a>
+                        <a href="/create" class="text-white hover:text-gray-300">Add Blog</a>
+                        <form action="/logout" method="post"><input type="submit" value="Logout"
+                                class="text-white hover:text-gray-300"></input></form>
+                        <%}%>
         </div>
 
         <!-- Mobile menu button for small screens -->
@@ -27,8 +28,16 @@
     </div>
 </nav>
 <div id="mobile-menu" class="hidden bg-violet-500 text-white p-4 mt-10">
-    <a href="#" class="block py-2">Home</a>
-    <a href="#" class="block py-2">About</a>
-    <a href="#" class="block py-2">Services</a>
-    <a href="#" class="block py-2">Contact</a>
+    <% if(!status) {%>
+        <div class="flex flex-col">
+            <a href="/" class="py-2 text-white hover:text-gray-300">Home</a>
+            <a href="/create" class="py-2 text-white hover:text-gray-300">Add Blog</a>
+            <form action="/logout" method="post"><input type="submit" value="Logout"
+                    class="py-2 text-white hover:text-gray-300"></input></form>
+        </div>
+        <%}else{%>
+            <a href="/" class="block py-2">Home</a>
+            <a href="/login" class="block py-2">Login</a>
+            <a href="/signup" class="block py-2">Signup</a>
+            <%}%>
 </div>
